[package]
name = "bevy_prototype_physx"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
bevy = "0.3.0"
physx = { git = "https://github.com/superdump/physx-rs", branch = "send-sync-and-locks" }
physx-sys = { git = "https://github.com/superdump/physx-rs", branch = "send-sync-and-locks" }
